--- a/chi-tiet-tin-tuc.html
+++ b/chi-tiet-tin-tuc.html
@@ -113,10 +113,10 @@
                   <a class="nav-link" href=""> Dự án </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Tin tức </a>
+                  <a class="nav-link" href="/tintuc.html"> Tin tức </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Liên hệ </a>
+                  <a class="nav-link" href="/contact.html"> Liên hệ </a>
                 </li>
               </ul>
             </div>
