--- a/tintuc.html
+++ b/tintuc.html
@@ -149,7 +149,7 @@
                     </div>
                       <div class="item" style="border-radius: 0;">
                         <div class="image">
-                          <a href="">
+                          <a href="/chi-tiet-tin-tuc.html">
                             <img
                               src="/templates/home/images/top-news.png"
                               alt=""
@@ -176,7 +176,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <div class="item">
                       <div class="image">
-                        <a href="">
+                        <a href="/chi-tiet-tin-tuc.html">
                           <img
                             src="/templates/home/images/Rectangle 40.png"
                             alt=""
@@ -198,7 +198,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <div class="item">
                       <div class="image">
-                        <a href="">
+                        <a href="/chi-tiet-tin-tuc.html">
                           <img
                             src="/templates/home/images/Rectangle 40.png"
                             alt=""
@@ -220,7 +220,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <div class="item">
                       <div class="image">
-                        <a href="">
+                        <a href="/chi-tiet-tin-tuc.html">
                           <img
                             src="/templates/home/images/Rectangle 40.png"
                             alt=""
@@ -242,7 +242,7 @@
                   <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
                     <div class="item">
                       <div class="image">
-                        <a href="">
+                        <a href="/chi-tiet-tin-tuc.html">
                           <img
                             src="/templates/home/images/Rectangle 40.png"
                             alt=""
@@ -334,12 +334,12 @@
                     <li>
                       <a href="" title="Dự án">Dự án</a>
                     </li>
-                    <li>
-                      <a href="" title="Tin tức">Tin tức</a>
-                    </li>
-                    <li>
-                      <a href="" title="Liên hệ">Liên hệ</a>
-                    </li>
+                    <li class="nav-item">
+                  <a class="nav-link" href="/tintuc.html"> Tin tức </a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="/contact.html"> Liên hệ </a>
+                </li>
                   </ul>
                 </div>
                 <div class="infor-contact">
