--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <div class="main-menu">
               <ul class="nav-menu">
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Trang chủ </a>
+                  <a class="nav-link" href="/"> Trang chủ </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href=""> Về chúng tôi </a>
