--- a/tintuc.html
+++ b/tintuc.html
@@ -101,7 +101,7 @@
             <div class="main-menu">
               <ul class="nav-menu">
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Trang chủ </a>
+                  <a class="nav-link" href="/"> Trang chủ </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href=""> Về chúng tôi </a>
@@ -113,10 +113,10 @@
                   <a class="nav-link" href=""> Dự án </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Tin tức </a>
+                  <a class="nav-link" href="/tintuc.html"> Tin tức </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Liên hệ </a>
+                  <a class="nav-link" href="/contact.html"> Liên hệ </a>
                 </li>
               </ul>
             </div>
