--- a/duan.html
+++ b/duan.html
@@ -128,67 +128,121 @@
         </div>
       </div>
       <div class="body-page">
-        <div class="contact-page">
-          <div class="container">
-            <div class="top-maps-location">
-              <img src="/templates/home/images/contact.svg" alt="contact" />
-            </div>
-            <div class="form-contact-page-details">
-              <div class="title text-center">
-                <h2>Liên hệ</h2>
+        <div class="project-page">
+          <div class="banner">
+            <img src="/templates/home/images/prjbanner.png" alt="banner_news" />
+            <div class="container">
+              <div class="category">
+                <h1>Dự án</h1>
+                <p>
+                  Lorem Ipsum is simply dummy text of the printing and
+                  typesetting industry. Lorem Ipsum has been the industry's
+                  standard dummy text ever since the 1500s, when an unknown
+                  printer took a galley of type and scrambled it to make a type
+                  specimen book. It has survived not only five centuries, but
+                  also the leap into electronic typesetting, remaining
+                  essentially unchanged. It was popularised in the 1960s with
+                  the release of Letraset sheets containing Lorem Ipsum
+                  passages, and more recently with desktop publishing software
+                  like Aldus PageMaker including versions of Lorem Ipsum.
+                </p>
               </div>
-              <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                  <div class="maps-contact-form-page">
-                    <iframe
-                      src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d7449.59708164132!2d105.82987692200042!3d21.00071119855259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!3e6!4m3!3m2!1d21.0021034!2d105.83530569999999!4m3!3m2!1d21.002163499999998!2d105.8352843!5e0!3m2!1svi!2s!4v1766633333421!5m2!1svi!2s"
-                      width="100%"
-                      style="border: 0"
-                      allowfullscreen=""
-                      loading="lazy"
-                      referrerpolicy="no-referrer-when-downgrade"
-                    ></iframe>
+            </div>
+          </div>
+          <div class="category-list">
+            <div class="list-cate">
+              <div class="container">
+                <ul>
+                  <li class="active"><a class="active" href="">Tất cả</a></li>
+                  <li><a href="">Lorem ipsum</a></li>
+                  <li><a href="">Lorem ipsum</a></li>
+                  <li><a href="">Lorem ipsum</a></li>
+                  <li><a href="">Lorem ipsum</a></li>
+                  <li><a href="">Lorem ipsum</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="container">
+              <div class="list-group-item-prj">
+                <div class="row">
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj1.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
+                    </div>
                   </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                  <div class="form-contact-page-show">
-                    <div class="w-100">
-                      <div class="form-style">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" class="form-style-input" />
-                      </div>
-                      <div class="form-style">
-                        <label for="Email">Email</label>
-                        <input
-                          type="text"
-                          id="email"
-                          class="form-style-input"
-                        />
-                      </div>
-                      <div class="form-style">
-                        <label for="phone">Phone</label>
-                        <input
-                          type="text"
-                          id="phone"
-                          class="form-style-input"
-                        />
-                      </div>
-                      <div class="form-style">
-                        <label for="mess">Mess</label>
-                        <textarea
-                          rows="6"
-                          cols="20"
-                          id="mess"
-                          class="form-style-input"
-                        ></textarea>
-                      </div>
-                      <div class="form-style-btn">
-                        <input
-                          type="button"
-                          value="GỬI"
-                          class="btn-contact-page-click"
-                        />
-                      </div>
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj2.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj3.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj4.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj4.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj3.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj2.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                  <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                    <div class="item-prj">
+                      <a href="/chi-tiet-du-an.html">
+                        <img src="/templates/home/images/prj1.jpg" alt="" />
+                        <div class="title">
+                          <p>Lorem Ipsum is simply dummy text</p>
+                        </div>
+                      </a>
                     </div>
                   </div>
                 </div>
