--- a/chi-tiet-du-an.html
+++ b/chi-tiet-du-an.html
@@ -128,69 +128,143 @@
         </div>
       </div>
       <div class="body-page">
-        <div class="contact-page">
-          <div class="container">
-            <div class="top-maps-location">
-              <img src="/templates/home/images/contact.svg" alt="contact" />
-            </div>
-            <div class="form-contact-page-details">
-              <div class="title text-center">
-                <h2>Liên hệ</h2>
+        <div class="project-page-details">
+          <div class="banner">
+            <img src="/templates/home/images/prjbanner.png" alt="" />
+            <div class="container">
+              <div class="title-cate">
+                <h2>Dự án</h2>
               </div>
+            </div>
+          </div>
+          <div class="projects-details-information">
+            <div class="container">
               <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                  <div class="maps-contact-form-page">
-                    <iframe
-                      src="https://www.google.com/maps/embed?pb=!1m24!1m12!1m3!1d7449.59708164132!2d105.82987692200042!3d21.00071119855259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m9!3e6!4m3!3m2!1d21.0021034!2d105.83530569999999!4m3!3m2!1d21.002163499999998!2d105.8352843!5e0!3m2!1svi!2s!4v1766633333421!5m2!1svi!2s"
-                      width="100%"
-                      style="border: 0"
-                      allowfullscreen=""
-                      loading="lazy"
-                      referrerpolicy="no-referrer-when-downgrade"
-                    ></iframe>
-                  </div>
-                </div>
-                <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                  <div class="form-contact-page-show">
-                    <div class="w-100">
-                      <div class="form-style">
-                        <label for="name">Name</label>
-                        <input type="text" id="name" class="form-style-input" />
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                  <div class="information">
+                    <div class="back">
+                      <a href="/duan.html"> Quay lại </a>
+                    </div>
+                    <div class="content">
+                      <h1>Lorem Ipsum is simply dummy text</h1>
+                      <div class="infor-item">
+                        <p>
+                          <strong>TÊN DỰ ÁN</strong>
+                          <span>Lorem Ipsum is simply</span>
+                        </p>
                       </div>
-                      <div class="form-style">
-                        <label for="Email">Email</label>
-                        <input
-                          type="text"
-                          id="email"
-                          class="form-style-input"
-                        />
+                      <div class="infor-item">
+                        <p>
+                          <strong>TÊN CHỦ ĐẦU TƯ/KHÁCH HÀNG</strong>
+                          <span>Lorem Ipsum is simply</span>
+                        </p>
                       </div>
-                      <div class="form-style">
-                        <label for="phone">Phone</label>
-                        <input
-                          type="text"
-                          id="phone"
-                          class="form-style-input"
-                        />
+                      <div class="infor-item">
+                        <p>
+                          <strong>VỊ TRÍ</strong>
+                          <span>Lorem Ipsum is simply</span>
+                        </p>
                       </div>
-                      <div class="form-style">
-                        <label for="mess">Mess</label>
-                        <textarea
-                          rows="6"
-                          cols="20"
-                          id="mess"
-                          class="form-style-input"
-                        ></textarea>
+                      <div class="infor-item">
+                        <p>
+                          <strong>NĂM KHỞI CÔNG</strong>
+                          <span>Lorem Ipsum is simply</span>
+                        </p>
                       </div>
-                      <div class="form-style-btn">
-                        <input
-                          type="button"
-                          value="GỬI"
-                          class="btn-contact-page-click"
-                        />
+                      <div class="infor-item">
+                        <p>
+                          <strong>TÌNH TRẠNG</strong>
+                          <span>Lorem Ipsum is simply</span>
+                        </p>
+                      </div>
+                      <div class="descreption">
+                        <p>
+                          Lorem Ipsum is simply dummy text of the printing and
+                          typesetting industry. Lorem Ipsum has been the
+                          industry's standard dummy text ever since the 1500s,
+                          when an unknown printer took a galley of type and
+                          scrambled it to make a type specimen book. It has
+                          survived not only five centuries, but also the leap
+                          into electronic typesetting, remaining essentially
+                          unchanged. It was popularised in the 1960s with the
+                          release of Letraset sheets containing Lorem Ipsum
+                          passages, and more recently with desktop publishing
+                          software like Aldus PageMaker including versions of
+                          Lorem Ipsum.
+                        </p>
                       </div>
                     </div>
                   </div>
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
+                  <div class="slider-image-show">
+                    <div class="item">
+                      <img src="/templates/home/images/prjdetails.png" alt="" />
+                    </div>
+                    <div class="item">
+                      <img src="/templates/home/images/prjdetails.png" alt="" />
+                    </div>
+                    <div class="item">
+                      <img src="/templates/home/images/prjdetails.png" alt="" />
+                    </div>
+                    <div class="item">
+                      <img src="/templates/home/images/prjdetails.png" alt="" />
+                    </div>
+                    <div class="item">
+                      <img src="/templates/home/images/prjdetails.png" alt="" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="another-item project-page">
+            <div class="container">
+              <div class="title text-center">
+                <h2>Dự án/Tin tức khác</h2>
+              </div>
+            </div>
+            <div class="container">
+              <div class="list-group-item-prj slider-box-prj">
+                <div class="item-prj" style="margin: 0 7.5px">
+                  <a href="">
+                    <img src="/templates/home/images/prj1.jpg" alt="" />
+                    <div class="title">
+                      <p>Lorem Ipsum is simply dummy text</p>
+                    </div>
+                  </a>
+                </div>
+                <div class="item-prj" style="margin: 0 7.5px">
+                  <a href="">
+                    <img src="/templates/home/images/prj1.jpg" alt="" />
+                    <div class="title">
+                      <p>Lorem Ipsum is simply dummy text</p>
+                    </div>
+                  </a>
+                </div>
+                <div class="item-prj" style="margin: 0 7.5px">
+                  <a href="">
+                    <img src="/templates/home/images/prj1.jpg" alt="" />
+                    <div class="title">
+                      <p>Lorem Ipsum is simply dummy text</p>
+                    </div>
+                  </a>
+                </div>
+                <div class="item-prj" style="margin: 0 7.5px">
+                  <a href="">
+                    <img src="/templates/home/images/prj1.jpg" alt="" />
+                    <div class="title">
+                      <p>Lorem Ipsum is simply dummy text</p>
+                    </div>
+                  </a>
+                </div>
+                <div class="item-prj" style="margin: 0 7.5px">
+                  <a href="">
+                    <img src="/templates/home/images/prj1.jpg" alt="" />
+                    <div class="title">
+                      <p>Lorem Ipsum is simply dummy text</p>
+                    </div>
+                  </a>
                 </div>
               </div>
             </div>
