--- a/chi-tiet-tin-tuc.html
+++ b/chi-tiet-tin-tuc.html
@@ -110,7 +110,7 @@
                   <a class="nav-link" href=""> Dịch vụ </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href=""> Dự án </a>
+                  <a class="nav-link" href="/duan.html"> Dự án </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/tintuc.html"> Tin tức </a>
